crates/service/tests/hover/snapshots/features__hover__array_type.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(type $array (array (mut (ref null nofunc))))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 20
    },
    "end": {
      "line": 3,
      "character": 26
    }
  }
}
