crates/service/tests/hover/snapshots/features__hover__block_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(block $b (param i64) (param f64) (result i32) (result f32))"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 11
    },
    "end": {
      "line": 3,
      "character": 13
    }
  }
}
