crates/service/tests/hover/snapshots/features__hover__block_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(block $b (param i64) (param f64) (result i32) (result f32))"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 9
    },
    "end": {
      "line": 4,
      "character": 11
    }
  }
}
