crates/service/tests/hover/snapshots/features__hover__block_int_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(block (result i32) (result f32))\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 9
    },
    "end": {
      "line": 4,
      "character": 10
    }
  }
}
