crates/service/tests/hover/snapshots/features__hover__block_via_type_use.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(block $b (param i32) (param i32) (result i32))\n```"
  },
  "range": {
    "start": {
      "line": 5,
      "character": 9
    },
    "end": {
      "line": 5,
      "character": 11
    }
  }
}
