crates/service/tests/hover/snapshots/features__hover__cont_type_with_non_func.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(type $ct (cont $ft))\n```"
  },
  "range": {
    "start": {
      "line": 4,
      "character": 20
    },
    "end": {
      "line": 4,
      "character": 23
    }
  }
}
