crates/service/tests/hover/snapshots/features__hover__data_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(data $d)\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 8
    },
    "end": {
      "line": 2,
      "character": 10
    }
  }
}
